Improvements to the model and Jacoco, adding Git Actions